<resources>

    <string name="app_name">CSM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_csmmain">Csmmain</string>
    <string name="bianhao">No:</string>
    <string name="xingming">Name:</string>
    <string name="xingbietitle">Sex:</string>
    <string name="zhuangtai">Stat:</string>
    <string name="baojing">Alarm:</string>
    <string name="csi">CSI</string>
    <string name="eeg">BS</string>
    <string name="eeg1">EEG</string>
    <string name="dongjie">Freeze</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="save">Save</string>
    <string name="warnon">Alarm:On</string>
    <string name="warnoff">Alarm:Off</string>
    <string name="jilu">Record</string>
    <string name="qushitu">Trend Graph</string>
    <string name="shezi">Settings</string>
    <string name="binhao">Data</string>
    <string name="menumj">CSI Time Interval</string>
    <string name="menumjrec">CSI Record Time Interval</string>
    <string name="menueeg">EEG Time Interval</string>
    
    <string name="scaleeeg">EEG scale Interval</string>
    <string name="scaleeegrec">EEG record scale Interval</string>
    
    <string name="csitime">WAVE Settings</string>
    <string name="eegtime">EEG Time Settings</string>
    
    <string name="bjshezi">Alarm Settings</string>
    <string name="sjshezi">Event Settings</string>
    <string name="shjshezi">Time Settings</string>
    <string name="dayshezi">Print Settings</string>
    <string name="benjishezi">Device Settings</string>
    <string name="baojingkaiguan">Alarm On/Off</string>
    <string name="baojingguan">off</string>
    <string name="baojingkai">on</string>
    <string name="shangxiangshez">Upper Limit</string>
    <string name="xiaxiangshez">Lower Limit</string>
    <string name="youdao">Induction</string>
    <string name="chaguan">Intubation</string>
    <string name="weichi">Maintenance</string>
    <string name="waike">Surgery</string>
     <string name="zhushe">Injection</string>
    <string name="beizhu">Note</string>
    <string name="weichijies">End Maintenance</string>
    <string name="yidong">Movement</string>
    <string name="wushijian">No Event</string>
    
    <string name="csiwave">CSI Oscillogram</string>
    <string name="csitree">CSI Histogram</string>
    <string name="eegwave">BS Oscillogram</string>
    <string name="csieegwave">CSI/BS Oscillogram</string>
    
    <string name="wavereview">Review</string>
    <string name="print">Print</string>
    
    
    <string name="hour">H</string>
    <string name="min">M</string>
    <string name="year">Y</string>
    <string name="mon">MON</string>
    <string name="day">D</string>
    <string name="shez">Settings</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="setlanguage">Language Settings:  </string>
    <string name="binrenziliao">Patient Info</string>
     <string name="yansimos">Demo Mode</string>
     <string name="ruanjianbanb">Version</string>
     <string name="binglihao">NO</string>
     <string name="xingbie">Gender</string>
     <string name="nianying">Old</string>
     <string name="xingming1">Name</string>
     <string name="softversion">The Current Software Version is V2.0(5J27)</string>
     <string name="majui">CSI</string>
     <string name="zonghecanshu">Parameters </string>
     <string name="xinxitishi">Information Tips</string>
     <string name="baofayizhibi">BS%</string>
     <string name="jidianzhi">EMG</string>
     <string name="xinhaoliang">SQI</string>
     <string name="heise">black</string>
     <string name="baise">white</string>
     <string name="lianjiezhuangtai">Connection</string>
     <string name="diancidianliang">BAT</string>
     
     <string name="zhengzaichongdian">Chargin</string>
     
     <string name="sdunmount">SD card is not loaded</string>
     <string name="sdfull">SD card is full</string>
     <string name="recwarning">Please stop when viewing the recording information</string>
     <string name="binrenwarning">Please stop when modifing the patient information.</string>
     <string name="saveOver">All data have been saved</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="man">Male</string>
     <string name="woman">Female</string>
     <string name="normalchannel">Data communication is normal.</string>
     <string name="nochannel">Data communication is not connected</string>
     <string name="errorchannel">Data communication is abnorma</string>
     
     <string name="normalcsi">CSI is normal</string>
     <string name="lowcsi">CSI is low</string>
     <string name="highcsi">CSI is high</string>
     <string name="benjishezhi">Device Settings</string>
     <string name="dianliang">BAT:</string>
     <string name="charging">Charging</string>
     <string name="chargfull">Full</string>
     <string name="getrecfinish">Data loading is complete.</string>
     <string name="ok">OK</string>
     <string name="warning">Tips</string>
     <string name="warn_infoempty">Please input patient informaiton before measuring.</string>
     <string name="warn_savedata">The measurement data are saving</string>
     <string name="warn_deletedata">Confirm to delete this file?</string>
     <string name="warn_loaddata">Data are loading,please wait.</string>
     <string name="csi_review">CSI review</string> 
     <string name="bs_review">BS review</string>
      <string name="eeg_review">EEG review</string>
     <string name="csi_t_review">CSI_T review</string>
     <string name="csi_show">CSI demo</string> 
     <string name="bs_show">BS demo</string>
     <string name="csi_t_show">CSI_T demo</string>
     <string name="tantou_noconnect">Probe is not properly connected.</string>
     <string name="saving">Data are saving.</string>
     <string name="data_nosave">Data are not saved</string>
     <string name="sd_unmount">SD card is not properly loaded.</string>
     <string name="sd_full">SD card is full.</string>
     <string name="data_error">The receiving data abnormal</string>
     <string name="info_changed">Information has changed，please save data now</string>
     <string name="info_error">Can not save data,information is incomplete.</string>
     <string name="review_record">Can not save data when reviewing the recording.</string>
     <string name="print_start_time">Start date/time:</string>
     <string name="print_use_time">Time spent:</string>
     <string name="print_end_time">End date/time:</string>
     <string name="print_now_time">Print date/time:</string>
     <string name="no_bluetooth">没有找到蓝牙适配器</string>
     <string name="no_printer">没有选择打印机</string>
     <string name="bluetooth_error">读取蓝牙设备错误</string>
     <string name="printing">正在打印...</string>
     <string name="create_paper_error">创建打印页面失败</string>
     <string name="start_time">Start time</string>
     <string name="end_time">end time</string>
     <string name="delete">delete</string>
     <string name="select_printer">Select printer</string>
     <string name="exit">Exit</string>
     <string name="eegfudu">amplitude set</string>
     <string name="bojingyinshezhi">CSI audio set</string>
       <string name="bojingxianshezhi">CSI warn level set</string>
     
      

            
    <string-array name="majui_array">
        <item>1s</item>
        <item>2s</item>   
        <item>5s</item>  
        <item>10s</item>  
        <item>1min</item>  
        <item>2min</item>  
     </string-array> 
     
    <string-array name="banner_array">
        <item>banner</item>  
        <item>shandow</item>  
        <item>none</item>   
     </string-array> 
     
     <string-array name="sound_array">
        <item>sound 1</item>  
        <item>sound 2</item>  
        <item>sound 3</item>
        <item>sound 4</item> 
     </string-array> 
     
     <string-array name="eeg_array">
        <item>12.5mm/s</item>  
        <item>25mm/s</item>  
        <item>50mm/s</item>   
     </string-array> 
     
     <string-array name="receeg_array">
        <item>25mm/s</item>  
        <item>50mm/s</item>  
        <item>12.5mm/s</item>   
     </string-array> 
     
     <string-array name="fudu_array">
        <item>5uv</item>  
        <item>10uv</item>
        <item>25uv</item>  
        <item>50uv</item>    
     </string-array>
     
    <string-array name="shijianshez_array">
        <item>Induction</item>  
        <item>Intubation</item>  
        <item>Maintenance</item>  
        <item>Surgery</item>  
        <item>Injection</item>  
        <item>Note</item> 
        <item>End Maintenance</item>  
        <item>Movement</item> 
     </string-array> 
    

</resources>