<?xml version="1.0" encoding="utf-8"?>
<com.example.csm.boxingview.showsetting xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_marginTop="20dp"
    android:id="@+id/showSettingView"
    android:layout_height="wrap_content" >
    <TableRow android:layout_width="wrap_content"
         android:layout_marginTop="5dp"
	        android:layout_height="wrap_content"> 
	 <TextView android:layout_width="wrap_content"
	     	android:text="@string/csieegwave"
	     	android:layout_marginLeft="10dp"
	     	android:layout_gravity="center"
	     	android:textColor = "#ffF5F5DC"
	     	android:textSize="20dp"
	        android:layout_height="wrap_content"/> 
	 <Button
	     android:layout_width="36dp"
	     android:layout_height="36dp"
	     android:layout_marginLeft="4dp"
	     android:layout_marginTop="4dp"
	     android:background="@drawable/select"
	     android:id="@+id/btn1"
	     />
	     
	 <TextView android:layout_width="wrap_content"
	     	android:text="@string/csiwave"
	     	android:layout_marginLeft="15dp"
	     	android:textSize="20dp"
	     	android:layout_gravity="center"
	     	android:textColor = "#ffF5F5DC"
	        android:layout_height="wrap_content"/> 
	 <Button
	     android:layout_width="36dp"
	     android:layout_height="36dp"
	     android:layout_marginLeft="4dp"
	     android:layout_marginTop="4dp"
	     android:background="@drawable/select"
	     android:id="@+id/btn2"
	     >
	     
	 </Button>
	 </TableRow>
	 
     <TableRow android:layout_width="wrap_content"
         android:layout_marginTop="5dp"
	        android:layout_height="wrap_content"> 
	 <TextView android:layout_width="wrap_content"
	     	android:text="@string/eegwave"
	     	android:layout_marginLeft="10dp"
	     	android:textSize="20dp"
	     	android:layout_gravity="center"
	     	android:textColor = "#ffF5F5DC"
	        android:layout_height="wrap_content"/> 
	 <Button
	     android:layout_width="36dp"
	     android:layout_height="36dp"
	     android:layout_marginLeft="4dp"
	     android:layout_marginTop="4dp"
	     android:background="@drawable/select"
	     android:id="@+id/btn3"
	     />
	     
	 <TextView android:layout_width="wrap_content"
	     	android:text="@string/csitree"
	     	android:layout_marginLeft="15dp"
	     	android:textSize="20dp"
	     	android:visibility="gone"
	     	android:layout_gravity="center"
	     	android:textColor = "#ffF5F5DC"
	        android:layout_height="wrap_content"/> 
	 <Button
	     android:layout_width="36dp"
	     android:layout_height="36dp"
	     android:visibility="gone"
	     android:layout_marginLeft="4dp"
	     android:layout_marginTop="4dp"
	    android:background="@drawable/select"
	     android:id="@+id/btn4"
	     >	     
	 </Button>
	 </TableRow>
</com.example.csm.boxingview.showsetting>