<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="24dp"
    android:text="@string/select_printer"
    />
<ListView android:id="@+id/listView1" android:layout_width="fill_parent" android:layout_height="156dp" android:layout_weight="0.29"></ListView>
<TableRow android:layout_width="fill_parent" android:id="@+id/tableRow1" android:layout_height="20dp"></TableRow>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
    <Button android:layout_height="wrap_content" android:text="@string/print" android:textSize="24dp" android:layout_width="100dp" android:id="@+id/button1" android:layout_marginRight="20dip"></Button>
    <Button android:layout_height="wrap_content" android:text="@string/exit" android:textSize="24dp" android:layout_width="100dp" android:id="@+id/button2" android:layout_marginRight="40dip"></Button>
    <Button android:layout_height="wrap_content" android:text="条码打印" android:layout_width="wrap_content" android:id="@+id/button3" android:visibility="gone" android:layout_marginRight="10dip"></Button>
</LinearLayout>
<TableRow android:id="@+id/tableRow2" android:layout_width="fill_parent" android:layout_height="10dp"></TableRow>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:visibility="gone" >
    <Button android:layout_height="wrap_content" android:text="走到左黑标" android:layout_width="wrap_content" android:id="@+id/button4" android:layout_marginRight="10dip"></Button>
    <Button android:layout_height="wrap_content" android:text="走到右黑标" android:layout_width="wrap_content" android:id="@+id/button5" android:layout_marginRight="10dip"></Button>
    <Button android:layout_height="wrap_content" android:text="走到标签处" android:layout_width="wrap_content" android:id="@+id/button6" android:layout_marginRight="10dip"></Button>
</LinearLayout>
</LinearLayout>
